# cta-graphs

./: .html  AverageWait.R  Babies.R  Babies_Linear_Model  EachStopTimeSeries.R  ettercap.txt  r_tutorial.tmproj  r_tutorial_graphing.txt  r_tutorial_regression.txt
CTA/: AverageWait.R  AvgPostgres.R  EachStopTimeSeries.R  RegressionExamples.R  TimeSeries.R
RSPython/: Changes.html  DESCRIPTION  INSTALL.win  Makefile  Makefile.in  Makevars.win  README  cleanup  cleanup.in  config.status  configure  configure.in
RSPython/R/: Converters.R  FirstLib.R  Python.S  dispatch.R  foreignReference.S  modules.S  parseEval.S  referenceManager.S  references.S  reflectance.S
RSPython/inst/Docs/: FAQ.html  Features.html
RSPython/inst/Python/: R.py  README  RReference.py  RS.py  SClassGenerator.py
RSPython/inst/include/: PythonCall.h  PythonFunctionConverters.h  PythonReferences.h  PythonReflectance.h  RCall.h  RPythonConverters.h  RPythonModule.h  RPythonReferences.h  UserConverters.h
RSPython/inst/scripts/: RPython.bsh  RPython.bsh.in  RPython.csh  RPython.csh.in
RSPython/inst/tests/: FunctionConverters.py  FunctionConvertersTest.py  GNUmakefile  Rmodule.h  Rpygtk.py  call.py  except.py  foo.py  garbage.R  gtkConversion.R  gtkConversion.c  hierarchy.py  longitudinal.py  map.py  method.py  myClass.S  plot.py  rnorm-test.py  rnorm.c  rnorm.py  tmp.py
RSPython/man/: DollarPythonReference.Rd  PyRefAttr.Rd  Python.Rd  PythonEval.Rd  PythonInit.Rd  PythonNew.Rd  PythonPath.Rd  PythonReflect.Rd  foreignReference.Rd  getNumPythonConverters.Rd  getPythonReferenceIDs.Rd  importPythonModule.Rd  isPythonInitialized.Rd  pythonFunction.Rd  pythonModuleTypes.Rd  referenceManager.Rd  setPythonHandler.Rd
RSPython/src/: GeneralConverters.c  Makevars  Makevars.in  PythonCall.c  PythonFunctionConverters.c  PythonReferences.c  PythonReflectance.c  RCall.c  RPythonConverters.c  RPythonReferences.c  UserConverters.c
data/: trips.csv
