AC_INIT(src/RCall.c)

if test -z "${PYTHON}" ; then
 AC_PATH_PROG(PYTHON, python)
fi

dnl Compute the version of Python
if test -z "${PYTHON_VERSION}" ; then 
    PYTHON_VERSION=`${PYTHON} < pyConfig/version.py`  
    echo "Python version $PYTHON_VERSION"
fi


AC_ARG_WITH(pylib,[--with-pylib=dir the name of the directory containing the linkable Python library],PYTHON_LIB_DIR=${with_pylib})

AC_ARG_WITH(pylib,[--with-pyinclude=dir the name of the directory containing the Python.h file],PYTHON_INCLUDE_DIR=${with_pyinclude})

AC_ARG_ENABLE(debug, [--enable-debug  enable debugging information in C code.], USE_DEBUG="$enableval")

if test -n "${USE_DEBUG}" ; then
  DEBUG_INFO="-g -DRSPYTHON_DEBUG"  
fi
AC_SUBST(DEBUG_INFO)


AC_ARG_WITH(threads, [--with-threads  link against the thread libraries for a thread aware Python],,
   if test ! `echo "import thread" | ${PYTHON}` ; then 
     with_threads="yes" 
     echo "Using threads"
   fi
       )

# Use distutils.sysconfig to find the include and lib directories?
# Need to find whether we have 
#  libpython2
#  libpython2.1
# See 

if test -z "${PYTHON_INCLUDE_DIR}" ; then
  PYTHON_INCLUDE_DIR=`${PYTHON} < pyConfig/distutilsInc.py` 
fi

if test -z "${PYTHON_LIB_DIR}" ; then
  PYTHON_LIB_DIR=`${PYTHON} < pyConfig/distutilsLib.py` 
  if test -n "${PYTHON_LIB_DIR}" ; then
   if test -r ${PYTHON_LIB_DIR}/libpython.a ; then
      PYTHON_LIB="-lpython"
   else
      PYTHON_LIB="-lpython${PYTHON_VERSION}"   
   fi
  fi 
fi


if test -z "${PYTHON_LIB_DIR}" ; then

  if test -f /usr/local/lib/python${PYTHON_VERSION}/config/libpython.a ; then
    PYTHON_LIB_DIR=/usr/local/lib/python${PYTHON_VERSION}/config
    PYTHON_LIB="-lpython"
    echo "Assuming libpython.a in $PYTHON_LIB_DIR is appropriate."
  else
    if test -f /usr/local/lib/python${PYTHON_VERSION}/config/libpython${PYTHON_VERSION}.a ; then
      echo "It appears that there is a file named libpython${PYTHON_VERSION}.a that should be symbolically linked to libpython.a in /usr/local/lib/python${PYTHON_VERSION}/config/"
      PYTHON_LIB_DIR=/usr/local/lib/python${PYTHON_VERSION}/config
      PYTHON_LIB="-lpython${PYTHON_VERSION}"
    else
      echo "       ***************"
      echo "You must specify where the Python library is. This is usually named libpython.a or"
      echo "libpython.so. Please specify the directory containing this file via the"
      echo "       --with-pylib=dir"
      echo "flag."
      echo "Try /usr/local/lib/python${PYTHON_VERSION}/config.R"
      echo "       ***************"
      exit 1
     fi
  fi
fi

if test -z "${PYTHON_INCLUDE_DIR}" ; then
DIRS="/usr/local/include /usr/local/include/python${PYTHON_VERSION}"
for f in $DIRS ;  do
  if test -f $f/Python.h ; then
   PYTHON_INCLUDE_DIR=$f
   echo "Found Python.h in $f"
   break
  fi
done
fi

if test -z "${PYTHON_INCLUDE_DIR}" ; then
  echo "Cannot find the Python.h header file needed for compiling the module"
  echo "If it is installed in a non-standard place, please specify this directory"
  echo "by setting the environment variable PYTHON_INCLUDE_DIR"
  exit 1;
fi

if test -n "${with_threads}" ; then

OLD_LIBS=${LIBS}
LIBS="-lpthread -lutil"
AC_TRY_LINK(, [int i; i++;], THREAD_LIBS=${LIBS}, oops="failed")

if test -n "${oops}" ; then
  # Almost definitely FreeBSD, but let's check by attempting
  # to link with -pthread.
 LIBS="-pthread"
 AC_TRY_LINK(, [int i; i++;], THREAD_LIBS="${LIBS}", oops="again")
 if test "${oops}" = "again" ; then
  echo "Problems with threading."
 fi
fi

LIBS="${OLD_LIBS}"

fi


dnl Note the [[[ to escape the [[ that is needed by R.
R_VERSION=`echo "cat(version[[['major']]])" | $R_HOME/bin/R --slave --vanilla`


echo "R version $R_VERSION"
if test "${R_VERSION}" = "2" ; then
  R_SHARED_LIB_DIR="${R_HOME}/lib"
  echo "Looking for libR.so in lib/"
else
  R_SHARED_LIB_DIR="${R_HOME}/bin"
fi

if test -f "${R_SHARED_LIB_DIR}/libR.so" ; then
  R_SHARED_LIBRARY="-lR"
else
  echo "Because you have not installed R as a shared library/DLL on your system"
  echo "you cannot use the RSPython package to call R from a Python process"
  echo "If you want to do this, please re-configure, compile and install R using the"
  echo " --enable-R-shlib option to R's configure script"
fi


AC_SUBST(R_SHARED_LIBRARY)

AC_SUBST(THREAD_LIBS)

AC_SUBST(R_HOME)
AC_SUBST(PYTHON_LIB_DIR)
AC_SUBST(PYTHON_LIB)
AC_SUBST(PYTHON_INCLUDE_DIR)
AC_SUBST(R_LIBRARY_DIR)
AC_SUBST(R_PACKAGE_DIR)
AC_SUBST(R_SHARED_LIB_DIR)

AC_OUTPUT(Makefile src/Makevars cleanup inst/scripts/RPython.csh inst/scripts/RPython.bsh)
chmod +x cleanup

